# mochi-bedrock

./: .clang-format  CMakeLists.txt  Doxyfile  README.md  build.sh  format.sh  spack.yaml
.github/workflows/: test.yml
docs/examples/bedrock/04_module/: CMakeLists.txt
docs/examples/bedrock/06_flock_integration/: CMakeLists.txt
docs/examples/bedrock/07_runtime_config/: CMakeLists.txt
docs/examples/bedrock/09_multi_margo/: CMakeLists.txt  margo_dependency.json  multi_margo.json  provider_with_engine.json
docs/source/: bedrock.rst
docs/source/bedrock/: 02_json.rst  03_query.rst  04_module.rst  05_jx9.rst  06_flock_integration.rst  07_runtime_config.rst  08_python.rst  09_multi_margo.rst
examples/: CMakeLists.txt  admin.cpp  client.cpp  config.jx9  demo1.json  demo2.json  demo3.json  example.json  module-a.c  module-b.c  module-b.cpp  server.cpp  test.jx9
examples/python/: README.md  demo.ipynb
hooks/: pre-commit
include/bedrock/: ABTioContext.hpp  ABTioManager.hpp  AbstractServiceFactory.hpp  Admin.hpp  AsyncRequest.hpp  Backend.hpp  Client.hpp  ClientDescriptor.hpp  ClientManager.hpp  ClientWrapper.hpp  DependencyFinder.hpp  DependencyMap.hpp  DependencyWrapper.hpp  Exception.hpp  Jx9Manager.hpp  MPIEnv.hpp  MargoContext.hpp  MargoManager.hpp  ModuleContext.hpp  MonaManager.hpp  NamedDependency.hpp  Provider.hpp  ProviderDescriptor.hpp  ProviderHandle.hpp  ProviderManager.hpp  ProviderWrapper.hpp  RequestResult.hpp  SSGContext.hpp  SSGManager.hpp  Server.hpp  ServiceFactory.hpp  ServiceGroupHandle.hpp  ServiceHandle.hpp  UUID.hpp  VoidPtr.hpp  client.h  common.h  module.h  service-handle.h
python/: CMakeLists.txt  bedrockctl-setup.sh.in
python/mochi/bedrock/: client.py  config_space.py  server.py  spec.py  test_abtio_manager.py  test_client.py  test_client_manager.py  test_config_space.py  test_dependencies.py  test_margo_manager.py  test_multi_engine_spec.py  test_provider_manager.py  test_server.py  test_service_group_handle.py  test_service_handle.py  test_ssg_manager.py
python/mochi/bedrock/bedrockctl/: __main__.py  _util.py  abt_io.py  client.py  module.py  mona.py  pool.py  provider.py  ssg.py  xstream.py
python/src/: py-bedrock-client.cpp  py-bedrock-server.cpp
src/: ABTioContext.cpp  ABTioContextImpl.hpp  ABTioManager.cpp  ABTioManagerImpl.hpp  Admin.cpp  AdminImpl.hpp  AsyncRequest.cpp  AsyncRequestImpl.hpp  Backend.cpp  CMakeLists.txt  Client.cpp  ClientImpl.hpp  ClientManager.cpp  ClientManagerImpl.hpp  DependencyFinder.cpp  DependencyFinderImpl.hpp  DynLibServiceFactory.cpp  DynLibServiceFactory.hpp  Exception.hpp  Formatting.hpp  JsonUtil.hpp  Jx9Manager.cpp  Jx9ManagerImpl.hpp  MPI.cpp  MPI.hpp  MPIEnv.cpp  MPIEnvImpl.hpp  MargoContext.cpp  MargoContextImpl.hpp  MargoLogging.cpp  MargoLogging.hpp  MargoManager.cpp  MargoManagerImpl.hpp  Module.cpp  ModuleContext.cpp  MonaManager.cpp  MonaManagerImpl.hpp  NamedDependency.cpp  NamedDependency.hpp  Provider.cpp  (+18 more)
src/dummy/: DummyBackend.cpp  DummyBackend.hpp
src/jx9/: jx9.c
tests/: AdminTest.cpp  CMakeLists.txt  Client.cpp  ClientTest.cpp  Init.cpp  InitInvalid.cpp  InitJx9.cpp  InitValid.cpp  InvalidConfigs.json  Main.cpp  MultiEngine.cpp  ProtocolInference.cpp  Regex.cpp  ServiceTest.cpp  ValidConfigs.json  spack.yaml
tests/modules/: BaseModule.hpp  Helpers.hpp  ModuleA.cpp  ModuleB.cpp  ModuleC.cpp
